--- a/package.json
+++ b/package.json
@@ -4,8 +4,13 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.1",
+    "@hookform/resolvers": "^3.3.4",
+    "@stripe/react-stripe-js": "^2.4.0",
+    "@stripe/stripe-js": "^2.4.0",
     "@tailwindcss/container-queries": "^0.1.1",
     "@tailwindcss/forms": "^0.5.7",
+    "@tanstack/react-query": "^5.20.2",
+    "@tanstack/react-query-devtools": "^5.20.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -14,7 +19,9 @@
     "@types/react": "^18.2.47",
     "@types/react-dom": "^18.2.18",
     "autoprefixer": "^10.4.17",
+    "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
+    "clsx": "^2.1.0",
     "formik": "^2.4.5",
     "now-ui-kit": "^1.3.0",
     "picomatch": "^2.3.1",
@@ -23,10 +30,15 @@
     "react-bootstrap": "^2.10.0",
     "react-bootstrap-switch": "15.5.3",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.50.1",
     "react-icons": "^5.0.1",
+    "@reduxjs/toolkit": "^1.9.5",
+    "react-number-format": "^5.3.1",
     "react-router-dom": "^6.21.2",
     "react-scripts": "5.0.1",
+    "react-redux": "^8.0.7",
     "react-slick": "^0.29.0",
+    "react-toastify": "^10.0.4",
     "reactstrap": "^9.2.2",
     "sass": "^1.70.0",
     "slick-carousel": "^1.8.1",
