--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.1",
     "@hookform/resolvers": "^3.3.4",
+    "@reduxjs/toolkit": "^1.9.5",
     "@stripe/react-stripe-js": "^2.4.0",
     "@stripe/stripe-js": "^2.4.0",
     "@tailwindcss/container-queries": "^0.1.1",
@@ -23,6 +24,7 @@
     "bootstrap": "^5.3.2",
     "clsx": "^2.1.0",
     "formik": "^2.4.5",
+    "mdb-react-ui-kit": "^7.2.0",
     "now-ui-kit": "^1.3.0",
     "picomatch": "^2.3.1",
     "postcss": "^8.4.33",
@@ -32,11 +34,10 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
     "react-icons": "^5.0.1",
-    "@reduxjs/toolkit": "^1.9.5",
     "react-number-format": "^5.3.1",
+    "react-redux": "^8.0.7",
     "react-router-dom": "^6.21.2",
     "react-scripts": "5.0.1",
-    "react-redux": "^8.0.7",
     "react-slick": "^0.29.0",
     "react-toastify": "^10.0.4",
     "reactstrap": "^9.2.2",
