--- a/package.json
+++ b/package.json
@@ -6,8 +6,6 @@
     "@fortawesome/fontawesome-free": "^6.5.1",
     "@hookform/resolvers": "^3.3.4",
     "@reduxjs/toolkit": "^1.9.5",
-    "@stripe/react-stripe-js": "^2.4.0",
-    "@stripe/stripe-js": "^2.4.0",
     "@tailwindcss/container-queries": "^0.1.1",
     "@tailwindcss/forms": "^0.5.7",
     "@tanstack/react-query": "^5.20.2",
@@ -24,7 +22,6 @@
     "bootstrap": "^5.3.2",
     "clsx": "^2.1.0",
     "formik": "^2.4.5",
-    "mdb-react-ui-kit": "^7.2.0",
     "now-ui-kit": "^1.3.0",
     "picomatch": "^2.3.1",
     "postcss": "^8.4.33",
@@ -45,6 +42,7 @@
     "slick-carousel": "^1.8.1",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
+    "tw-elements-react": "^1.0.0-alpha2",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
     "yup": "^1.3.3"
