--- a/package.json
+++ b/package.json
@@ -3,8 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
     "@fortawesome/fontawesome-free": "^6.5.1",
     "@hookform/resolvers": "^3.3.4",
+    "@mui/icons-material": "^5.15.10",
+    "@mui/material": "^5.15.10",
+    "@mui/styled-engine": "^5.15.11",
     "@reduxjs/toolkit": "^1.9.5",
     "@tailwindcss/container-queries": "^0.1.1",
     "@tailwindcss/forms": "^0.5.7",
@@ -21,8 +26,13 @@
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
     "clsx": "^2.1.0",
+    "devextreme-react": "^23.2.4",
     "formik": "^2.4.5",
+    "install": "^0.13.0",
+    "jwt-decode": "^4.0.0",
+    "mdb-react-ui-kit": "^7.2.0",
     "now-ui-kit": "^1.3.0",
+    "npm": "^10.4.0",
     "picomatch": "^2.3.1",
     "postcss": "^8.4.33",
     "react": "^18.2.0",
