--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
     "react-bootstrap-switch": "15.5.3",
+    "react-dnd": "^15.0.0",
+    "react-dnd-html5-backend": "^15.0.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
     "react-icons": "^5.0.1",
