--- a/package.json
+++ b/package.json
@@ -38,12 +38,14 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
     "react-bootstrap-switch": "15.5.3",
+    "react-datepicker": "^6.1.0",
     "react-dnd": "^15.0.0",
     "react-dnd-html5-backend": "^15.0.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
     "react-icons": "^5.0.1",
     "react-number-format": "^5.3.1",
+    "react-phone-number-input": "^3.3.9",
     "react-redux": "^8.0.7",
     "react-router-dom": "^6.21.2",
     "react-scripts": "5.0.1",
