--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@coreui/icons-react": "^2.2.1",
+    "@coreui/react": "^4.11.1",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@fortawesome/fontawesome-free": "^6.5.1",
@@ -52,6 +54,7 @@
     "react-slick": "^0.29.0",
     "react-toastify": "^10.0.4",
     "reactstrap": "^9.2.2",
+    "recharts": "^2.12.1",
     "sass": "^1.70.0",
     "slick-carousel": "^1.8.1",
     "tailwind-merge": "^2.2.0",
